2008-10-4  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/Hash.3:				CONSTified the typePtr argument
	* generic/tcl.decls:		of Tcl_InitCustomHashTable.
	* generic/tcl.h
	* generic/tclHash.c
	* ChangeLog
	* generic/tclDecls.h:		regenerated
	This change complies with TIP #27.

2008-10-4  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/GetIndex.3:			CONSTified the tablePtr argument
	* generic/tcl.decls:		of Tcl_GetIndexFromObj.
	* generic/tclIndexObj.c
	* ChangeLog
	* generic/tclDecls.h:		regenerated
	This change complies with TIP #27.

2008-10-03  Miguel Sofer  <msofer@users.sf.net>

	* tests/stack.test:
	* unix/tclUnixTest.c: removed test command teststacklimit and the
	corresponding constraint: it is not needed with NRE

2008-10-03  Donal K. Fellows  <dkf@users.sf.net>

	TIP #195 IMPLEMENTATION

	* generic/tclIndexObj.c (TclGetIndexFromObjList, PrefixMatchObjCmd)
	* doc/prefix.n, tests/string.test: Added [tcl::prefix] command for
	working with prefixes of strings at the Tcl level. [Patch 1040206]

	TIP #265 IMPLEMENTATION

	* generic/tclIndexObj.c (Tcl_ParseArgsObjv, PrintUsage):
	* generic/tcl.h (Tcl_ArgvInfo):	Added function for simple parsing of
	* doc/ParseArgs.3 (new file):	optional arguments to commands. Still
	needs tests and the like. [FRQ 1446696] Note that some of the type
	signatures are changed a bit from the proposed implementation so that
	they better reflect codified good practice for argument order.

2008-10-02  Andreas Kupries  <andreask@activestate.com>

	* tests/info.test (info-23.3): Updated output of the test to handle
	the NRE-enabled eval and the proper propagation of location
	information through it. [Bug 2017632]

	* doc/info.n: Rephrased the documentation of 'info frame' for positive
	numbers as level argument. [Bug 2134049]

	* tests/info.test (info-22.8): Made pattern for file containing
	tcltest less specific to accept both .tcl and .tm variants of the file
	during matching. [Bug 2129828]
